Say how to get the enum append back, and stop claiming JDK 26
Adding an enum constant means writing a final field, and JDK 26 refuses the
access that needs by default. What a developer meeting that wants is not the
diagnosis but the way past it, and there is one:
--sun-misc-unsafe-memory-access=allow. Measured on Java 25, it both silences the
deprecation warning and keeps the feature working, so it is now in the message
on the JVM that warns and in the message on the JVM that refuses.

The comparison table said any JDK 17+, which stops being true next month. It now
says JDK 17 to 25 and names the flag. Same in plugin.xml, llms.txt and the site
table.

A test of mine had to change with it: it asserted the message names the flag
that reproduces the refusal, which is our concern, not the reader's. It now
asserts the message names the flag that fixes it.